// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Progress /> Progress with multiple props matches with snapshot 1`] = `
.c0 {
  max-width: 100%;
}

.c0 .k-Meters-Progress__ramp {
  position: relative;
  height: 0.125rem;
  background: #eee;
}

.c0 .k-Meters-Progress__ramp::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  max-width: 50%;
  -webkit-transition: max-width 1s cubic-bezier(0,0.5,0.3,1);
  transition: max-width 1s cubic-bezier(0,0.5,0.3,1);
  background: #19b4fa;
}

.c0.k-Meters-Progress--disabled .k-Meters-Progress__ramp::after,
.c0.is-disabled .k-Meters-Progress__ramp::after {
  background: #d8d8d8;
}

.c0.k-Meters-Progress--orion .k-Meters-Progress__ramp,
.c0.k-Meters-Progress--orion .k-Meters-Progress__ramp::after {
  border-radius: 0.1875rem;
}

<div
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={50}
  className="c0 k-Meters-Progress k-Meters-Progress--andromeda"
  role="progressbar"
>
  <div
    className="k-Meters-Progress__ramp"
    style={
      Object {
        "height": 6,
      }
    }
  />
</div>
`;

exports[`<Progress /> simple Progress  matches with snapshot 1`] = `
.c0 {
  max-width: 100%;
}

.c0 .k-Meters-Progress__ramp {
  position: relative;
  height: 0.125rem;
  background: #eee;
}

.c0 .k-Meters-Progress__ramp::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  max-width: 0%;
  -webkit-transition: max-width 1s cubic-bezier(0,0.5,0.3,1);
  transition: max-width 1s cubic-bezier(0,0.5,0.3,1);
  background: #19b4fa;
}

.c0.k-Meters-Progress--disabled .k-Meters-Progress__ramp::after,
.c0.is-disabled .k-Meters-Progress__ramp::after {
  background: #d8d8d8;
}

.c0.k-Meters-Progress--orion .k-Meters-Progress__ramp,
.c0.k-Meters-Progress--orion .k-Meters-Progress__ramp::after {
  border-radius: 0.1875rem;
}

<div
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={0}
  className="c0 k-Meters-Progress k-Meters-Progress--andromeda"
  role="progressbar"
>
  <div
    className="k-Meters-Progress__ramp"
  />
</div>
`;
